--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -2,7 +2,7 @@
 project(sample)
 
 # assign sample generate path
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/${PROJECT_SOURCE_DIR})
 
 # executable files
 add_executable(${PROJECT_NAME} main.cpp)
