add utility.h which include two convent functions to print std STL

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(${PROJECT_NAME} main.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
         ${CMAKE_SOURCE_DIR}
+        ${CMAKE_SOURCE_DIR}/sample
         )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
