--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -5,7 +5,7 @@ project(sample)
 add_executable(${PROJECT_NAME} main.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
-        ${CMAKE_SOURCE_DIR}
+        ${CMAKE_SOURCE_DIR}/core
         ${CMAKE_SOURCE_DIR}/sample
         )
 
