ignore warnings related Boost version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ project(dev-utility-library)
 # cpp version
 set(CMAKE_CXX_STANDARD 14)
 
+# ignore warnings related Boost version
+set(Boost_NO_WARN_NEW_VERSIONS ON)
+
 # library
 add_subdirectory(core)
 
